search serial by product and serial_no
